# text-manipulate

./: .gitignore  Data-Text-Case-Types.html  Data-Text-Case.html  Data-Text-Lazy-Case.html  Data-Text-Lazy-Manipulate.html  Data-Text-Manipulate.html  Makefile  README.md  default.nix  doc-index.html  flake.nix  index-frames.html  index.html  mini_Data-Text-Case-Types.html  mini_Data-Text-Case.html  mini_Data-Text-Lazy-Case.html  mini_Data-Text-Lazy-Manipulate.html  mini_Data-Text-Manipulate.html  text-casing.cabal  text-manipulate.cabal
.github/workflows/: build.yml
bench/: Main.hs
lib/Data/Text/: Manipulate.hs
lib/Data/Text/Lazy/: Manipulate.hs
lib/Data/Text/Manipulate/Internal/: Fusion.hs  Types.hs
nix/: sources.json
script/: generate-pages
src/Data/Text/: Case.hs  Manipulate.hs
src/Data/Text/Case/: Fusion.hs  Types.hs
src/Data/Text/Lazy/: Case.hs  Manipulate.hs
src/Data/Text/Manipulate/: Fusion.hs  Types.hs
src/Data/Text/Manipulate/Internal/: Fusion.hs  Types.hs
test/: Main.hs
