name:                  text-casing
version:               0.1.0
synopsis:              Functions to modify the letter casing of single characters or the contents of text
homepage:              https://github.com/brendanhay/text-casing
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            brendan.g.hay@gmail.com
copyright:             Copyright (c) 2014 Brendan Hay
category:              Data
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Pending

source-repository head
    type:     git
    location: git://github.com/brendanhay/text-casing.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src
    ghc-options:       -Wall

    exposed-modules:
          Data.Text.Case
        , Data.Text.Case.Fusion

          -- Data.Text.Lazy.Case
          -- Data.Text.Case.Fusion.Mapping

    build-depends:
          base >= 4.5 && < 5.0
        , text >= 1.1 && < 1.3

benchmark benchmarks
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    bench
    ghc-options:       -Wall -O2 -threaded -with-rtsopts=-T

    build-depends:
          base
        , criterion   >= 1.0.0.2 && < 1.1
        , text-casing
        , text

test-suite tests
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs
    ghc-options:       -Wall -threaded

    build-depends:
          base
        , text-casing
        , tasty       >= 0.8
        , tasty-hunit >= 0.8
        , text
